added add FollowGame and avg score and last 100 avg score